# hw7-web

./: README.md  config.ini  my_select.py  pyproject.toml  seeds.py
database/: db.py
migrations/: env.py
migrations/versions/: 24f3933d37cb_init.py  cf4eef6f3178_fill_data.py
